vpc-endpoints.yaml

AWSTemplateFormatVersion: 2010-09-09

Description:  Create VPC Endpoints for SSM 

### ---------------------------- Parameters ----------------    
Parameters:

  VpcStackName:
    Description: >-
      Name of an active CloudFormation stack that contains the networking
      resources, such as the VPC and subnet that will be used in this stack.
    Type: String
    MinLength: 1
    MaxLength: 255
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
    # Default: base-network

  Project:
    Description: Project Name prefixed to resource names
    Type: String
    Default: "acme999"


### ---------------------------- Resources - VPC Endpoints ----------------    
Resources:
  VPCEndPointSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: VPCEndpoint SG - Allow https from instances in private subnet
        GroupName: ssm-vpc-endpoint
        VpcId: 
          Fn::ImportValue:
            !Sub ${VpcStackName}-VPCID
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0        
        Tags:
        - Key: Name
          Value: !Sub ${Project}-vpce



  # VPCEndpointSSM:
  VPCEndpointSSM:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      PolicyDocument: 
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - '*'
            Resource:
              - '*'
      VpcId: 
          Fn::ImportValue:
            !Sub ${VpcStackName}-VPCID
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
      PrivateDnsEnabled: False
      SecurityGroupIds: [!Ref  VPCEndPointSG]  
      SubnetIds: 
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet1
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet2

  VPCEndpointS3:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      PolicyDocument: 
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - '*'
            Resource:
              - '*'
      VpcId: 
          Fn::ImportValue:
            !Sub ${VpcStackName}-VPCID
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      SecurityGroupIds: [!Ref VPCEndPointSG]  
      SubnetIds: 
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet1
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet2
      PrivateDnsEnabled: False


  VPCEndpointEC2Messages:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      PolicyDocument: 
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - '*'
            Resource:
              - '*'
      VpcId: 
          Fn::ImportValue:
            !Sub ${VpcStackName}-VPCID
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2messages
      SecurityGroupIds: [!Ref VPCEndPointSG]  
      SubnetIds: 
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet1
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet2
      PrivateDnsEnabled: False

# The EC2 VPC endpoint isn't required for connecting the instance to Session Manager. 
# The EC2 VPC endpoint is required to create VSS-enabled snapshots of the instance.
  # VPCEndpointEC2:
  #   Type: AWS::EC2::VPCEndpoint
  #   Properties: 
  #     PolicyDocument: 
  #       Version: 2012-10-17
  #       Statement:
  #         - Effect: Allow
  #           Principal: '*'
  #           Action:
  #             - '*'
  #           Resource:
  #             - '*'
  #     VpcId: 
  #         Fn::ImportValue:
  #           !Sub ${VpcStackName}-VPCID
  #     VpcEndpointType: Interface
  #     ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2
  #     SecurityGroupIds: [!Ref VPCEndPointSG]  
  #     SubnetIds: 
  #       - Fn::ImportValue:
  #           !Sub ${VpcStackName}-PublicSubnet1
  #       - Fn::ImportValue:
  #           !Sub ${VpcStackName}-PublicSubnet2
  #     PrivateDnsEnabled: False



  VPCEndpointSSMMessages:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      PolicyDocument: 
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - '*'
            Resource:
              - '*'
      VpcId: 
          Fn::ImportValue:
            !Sub ${VpcStackName}-VPCID
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssmmessages
      SecurityGroupIds: [!Ref VPCEndPointSG]  
      SubnetIds: 
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet1
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet2
      PrivateDnsEnabled: False

  VPCEndpointKMS:
    Type: AWS::EC2::VPCEndpoint
    Properties: 
      PolicyDocument: 
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - '*'
            Resource:
              - '*'
      VpcId: 
          Fn::ImportValue:
            !Sub ${VpcStackName}-VPCID
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.kms
      SecurityGroupIds: [!Ref VPCEndPointSG]  
      SubnetIds: 
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet1
        - Fn::ImportValue:
            !Sub ${VpcStackName}-PublicSubnet2
      PrivateDnsEnabled: False
